--- a/Exercise_Problem/.settings/org.eclipse.core.resources.prefs
+++ b/Exercise_Problem/.settings/org.eclipse.core.resources.prefs
@@ -1,3 +1,4 @@
 eclipse.preferences.version=1
 encoding//src/chess/board/Board.java=UTF-8
 encoding//src/chess/test/BoardTest.java=UTF-8
+encoding//src/chess/test/PieceTest.java=UTF-8
